--- a/app/views/deployments/_list.html.erb
+++ b/app/views/deployments/_list.html.erb
@@ -26,7 +26,7 @@
           <% previous_group = group %>
         <% end %>
 
-        <tr id="deployment-<%= h(deployment.id) %>" class="deployment <%= cycle('odd', 'even') %>">
+        <tr id="deployment-<%= h(deployment.id) %>" class="deployment deployment-<%= deployment.result %> <%= cycle('odd', 'even') %>">
           <% @query.columns.each do |column| %><%= content_tag 'td', column_content(column, deployment), :class => column.css_classes %><% end %>
         </tr>
       <% end %>
