# redmine deployment - CHANGELOG
## 2024-10-01 v1.0.0
* **[add]** API endpoint
* **[add]** branches-resolving for changesets
* **[add]** application menu
* **[add]** LICENSE
* **[ref]** hooks & patches
* **[fix]** minor bugs

--- a/assets/stylesheets/deployment.css
+++ b/assets/stylesheets/deployment.css
@@ -5,3 +5,21 @@
 tr.deployment-fail{
     background: #fff2f2 !important;
 }
+
+a.branch span.badge{
+    border: 1px solid #ccc;
+    color: coral;
+}
+
+a.branch:hover{
+    text-decoration: none;
+}
+
+a.branch:hover span.badge{
+    background: coral;
+    color: #ccc;
+}
+
+.branches{
+    margin-bottom: 20px;
+}
